# pdf_lib

./: .gitignore  GUIDE.md  README.md  pdf-lib  pyproject.toml
scripts/: smoke_test.sh  uzu_serve.sh
src/pdf_lib/: catalog.py  categorizer.py  cli.py  db.py  default_categories.json  library.py  llm.py  metadata.py  organize.py  scanner.py  util.py
tools/: test_integration_uzu.py  test_uzu_provider.py
